// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - dropdown renders correctly 1`] = `
<jest>
  <div
    class="bcl-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      autocomplete="off"
      class="dropdown-toggle bcl-btn btn btn-primary btn-md"
      data-bs-toggle="dropdown"
      id="dropdown-1"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu"
    >
      <li>
        <a
          class="dropdown-item bcl-link"
          href="#"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          class="dropdown-item bcl-btn"
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          class="dropdown-item bcl-btn"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          class="dropdown-item active bcl-btn"
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with alignment end 1`] = `
<jest>
  <div
    class="bcl-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      autocomplete="off"
      class="dropdown-toggle bcl-btn btn btn-primary btn-md"
      data-bs-toggle="dropdown"
      id="dropdown-1"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu dropdown-menu-sm-end"
    >
      <li>
        <a
          class="dropdown-item bcl-link"
          href="#"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          class="dropdown-item bcl-btn"
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          class="dropdown-item bcl-btn"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          class="dropdown-item active bcl-btn"
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with dark mode 1`] = `
<jest>
  <div
    class="bcl-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      autocomplete="off"
      class="dropdown-toggle bcl-btn btn btn-primary btn-md"
      data-bs-toggle="dropdown"
      id="dropdown-1"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu dropdown-menu-dark"
    >
      <li>
        <a
          class="dropdown-item bcl-link"
          href="#"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          class="dropdown-item bcl-btn"
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          class="dropdown-item bcl-btn"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          class="dropdown-item active bcl-btn"
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with direction dropup 1`] = `
<jest>
  <div
    class="bcl-dropdown dropdown dropup"
  >
    <button
      aria-expanded="false"
      autocomplete="off"
      class="dropdown-toggle bcl-btn btn btn-primary btn-md"
      data-bs-toggle="dropdown"
      id="dropdown-1"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu"
    >
      <li>
        <a
          class="dropdown-item bcl-link"
          href="#"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          class="dropdown-item bcl-btn"
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          class="dropdown-item bcl-btn"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          class="dropdown-item active bcl-btn"
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with trigger link 1`] = `
<jest>
  <div
    class="bcl-dropdown dropdown"
  >
    <a
      aria-expanded="false"
      class="dropdown-toggle bcl-link"
      data-bs-toggle="dropdown"
      href="#"
      id="dropdown-1"
      role="button"
    >
      Dropdown Toggle
    </a>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu"
    >
      <li>
        <a
          class="dropdown-item bcl-link"
          href="#"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          class="dropdown-item bcl-btn"
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          class="dropdown-item bcl-btn"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          class="dropdown-item active bcl-btn"
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;
